--- a/AT2/AV2/at2/index.html
+++ b/AT2/AV2/at2/index.html
@@ -33,6 +33,18 @@
         SIGN UP WITH FACEBOOK
       </button><br>
     </div>
+    <div class="baixo">
+    <table id="tabelaRegistros">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+    </div>
   </section>
   <script src="js/script.js"></script>
 </body>
